<resources>
    <string name="app_name">NoMapsGO!</string>
    <string name="back_action">Home</string>
    <string name="btn_start_qrcode">QR CODE READER</string>
    <string name="btn_footprint">FOOTPRINT</string>
    <string name="btn_current_position">MAP</string>
    <string name="btn_info_another_utility">その他利便情報</string>
    <string name="btn_settings_app">SETTINGS</string>
    <string name="btn_time_table">SCHEDULE</string>
    <string name="btn_stamp_rally">STAMP RALLY</string>
    <string name="btn_official_website">NoMaps Official Website</string>
    <string name="btn_close">Close</string>
    <string name="btn_update">Update</string>
    <string name="btn_doc_download">Trade Show Documents DL</string>
    <string name="txt_allow_use_app">License</string>
    <string name="btn_action_no_accept">Disagree</string>
    <string name="btn_action_accept">Agree</string>
    <string name="txt_title_screen_register">Register information</string>
    <string name="edt_item_1">Item 1</string>
    <string name="edt_item_2">Item 2</string>
    <string name="edt_item_3">Item 3</string>
    <string name="btn_skip">Close</string>
    <string name="btn_register">Register</string>
    <string name="dialog_msg_register">Register Success</string>
    <string name="dialog_btn_start">Start</string>
    <string name="open_source_licensed">Open source license</string>
    <string name="state_bluetooth_ON">Bluetooth : ON</string>
    <string name="state_bluetooth_OFF">Bluetooth : OFF</string>
    <string name="state_nfc_ON">NFC : ON</string>
    <string name="state_nfc_OFF">NFC : OFF</string>
    <string name="licensed_content">Tangerine SDK\nhttp://tangerine.io</string>
    <string name="txt_title_scrern_footprint">Footprint</string>
    <string name="txt_message_recommen_nfc">We recommend the NFC function</string>
    <string name="title_scan_qr">Scan QR Code</string>
    <string name="title_information">Information</string>
    <string name="btn_artist_content">Music content DL</string>
    <string name="txt_thank">Thank you for coming</string>
    <string name="txt_today_schedule">Today\'s schedule</string>
    <string name="txt_tomorrow_schedule">Tomorrow\'s schedule</string>
    <string name="btn_download_app">Trade Show\nDocuments Download\nHere!</string>
    <string name="txt_send_mail">Download all</string>
    <string name="txt_download_music">Music\nSpecial Contents\nHere!</string>
</resources>