<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/screen_register_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_allow_use_app"
        android:textColor="@color/material_black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <EditText
            android:id="@+id/screen_register_EdtItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText_Register"
            android:hint="@string/edt_item_1" />

        <EditText
            android:id="@+id/screen_register_EdtItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/EditText_Register"
            android:hint="@string/edt_item_2" />


        <EditText
            android:id="@+id/screen_register_EdtItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/EditText_Register"
            android:hint="@string/edt_item_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/screen_register_btnSkip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/btn_skip"
            android:textColor="@color/material_black" />


        <Button
            android:id="@+id/screen_register_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/btn_register"
            android:textColor="@color/material_black" />

    </LinearLayout>
</LinearLayout>