<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_drawable"
        >
        <TextView
            android:id="@+id/activity_settings_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:textColor="@color/material_black"
            android:textSize="20sp"
            android:text="@string/btn_time_table"
            android:layout_gravity="center"
            />
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/activity_schedule_btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/back_action"
            android:textColor="@color/material_black"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/material_black"
        android:textSize="20sp"
        android:text="@string/txt_today_schedule"
        android:layout_gravity="center"
        />
    <ImageView
        android:id="@+id/image_today_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/material_black"
        android:textSize="20sp"
        android:text="@string/txt_tomorrow_schedule"
        android:layout_gravity="center"
        />
    <ImageView
        android:id="@+id/image_tomorrow_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_top" />


</LinearLayout>