<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ic_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btnStartQrCode"
                style="@style/ButtonScreenTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/btn_start_qrcode" />

            <Button
                android:id="@+id/btnCurrentPosition"
                style="@style/ButtonScreenTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/btn_current_position" />

            <Button
                android:id="@+id/btnSettings"
                style="@style/ButtonScreenTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/btn_settings_app" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btnMyPage"
                style="@style/ButtonScreenTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/btn_my_page" />

            <Button
                android:id="@+id/btnInfoUtilities"
                style="@style/ButtonScreenTop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/btn_info_another_utility" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>