<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/material_white"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.ActionBar">
        <TextView
            android:id="@+id/activity_download_music_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_allow_use_app"
            android:textColor="@color/material_black"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <!--<TextView-->
    <!--android:id="@+id/screen_lisensed_txtTitle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/txt_allow_use_app"-->
    <!--android:textColor="@color/material_black"-->
    <!--android:textSize="30sp"-->
    <!--android:textStyle="bold" />-->

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/scrollLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/screen_lisensed_txtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text=""
                android:textSize="14sp" />
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/screen_lisensed_btnNoAccept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/btn_action_no_accept"
            android:textColor="@color/material_black" />


        <Button
            android:id="@+id/screen_lisensed_btnAccept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/btn_action_accept"
            android:textColor="@color/material_black" />

    </LinearLayout>
</LinearLayout>